[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "instill"
version = "0.1.0"  ## bumpversion!
authors = [
    {name = "Simone Campagna", email = "simone.campagna11@gmail.com"},
]
description = "Instill drops of data in source files"
requires-python = ">=3.6"
keywords = []
classifiers = []
dependencies = ["pyyaml", "argcomplete"]

[project.optional-dependencies]
develop = ["pytest", "pytest-sugar",
           "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
instill = "instill.tool:main"
