[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "instill"
version = "0.1.1"  ## bumpver!
authors = [
    {name = "Simone Campagna", email = "simone.campagna11@gmail.com"},
]
description = "Instill drops of data in source files"
requires-python = ">=3.6"
keywords = []
classifiers = []
dependencies = ["pyyaml", "argcomplete"]

[project.optional-dependencies]
develop = ["bumpver", "pytest", "pytest-sugar",
           "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
instill = "instill.tool:main"

[tool.bumpver]
current_version = "0.1.1" ## bumpver!
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]
"src/instill/version.py" = [
    "VERSION = '{version}'",
]
"src/instill/drop.py" = [
    "INSTILL_API_VERSION = '{version}'",
]
